[package]
name = "pn-dcg-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.29.0"
pnet_macros = "0.29.0"
pnet_macros_support = "0.29.0"

[dev-dependencies]
syn = { version = "1.0.86", features = ["full", "visit"] }
proc-macro2 = "1.0.36"
quote = "1.0"