[package]
name = "pn-dcp-macro"
version = "0.1.0"
edition = "2021"
description = "Aim to quickly parsing and splicing pn-dcp packet"
repository = "https://github.com/fengqi2019/pn-dcp"

license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.89", features = ["full", "extra-traits", "visit"]}
quote = "1.0.17"
proc-macro2 = "1.0.36"
