[package]
name = "pn-dcp"
version = "0.1.0"
edition = "2021"
description = "Aim to quickly parsing and splicing pn-dcp packet"
license = "Apache-2.0"
repository = "https://github.com/fengqi2019/pn-dcp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.29.0"
pnet_macros = "0.29.0"
pnet_macros_support = "0.29.0"
anyhow = "1.0.51"
bytes = "1.1.0"
pn-dcp-macro = {path = "../pn-dcp-macro" }


[dev-dependencies]
anyhow = "1.0.51"
pnet = "0.29.0"
pnet_macros = "0.29.0"
pnet_macros_support = "0.29.0"
