[package]
name = "pn-dcp"
version = "0.3.0"
edition = "2021"
description = "Aim to quickly parsing and splicing pn-dcp packet"
repository = "https://github.com/fengqi2019/pn-dcp"

license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet =  {version = "0.34.0", features = ["std"]}
#
#pnet = "0.29.0"
#pnet_macros = "0.31.0"
#pnet_macros_support = "0.31.0"
anyhow = "1.0.51"
bytes = "1.1.0"
#pn-dcp-macro = {path = "../pn-dcp-macro" }
pn-dcp-macro = "0.3.0"
